# poo1_pc3_2020_2_lab206_template

./: CMakeLists.txt  README.md  cppcheck.cpp  p1.cpp  p1.h  run.sh  test_1.in
